# zootree

./: AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  dist-workspace.toml  mise.toml  release.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  publish-crates.yml  release.yml
docs/superpowers/plans/: 2026-04-28-zootree-implementation.md  2026-05-07-zellij-config-grouping.md  2026-05-07-zellij-kill-cleanup-order.md  2026-05-08-cli-completion.md  2026-05-08-force-skip-hooks.md  2026-05-08-github-cicd-release.md  2026-05-09-pre-commit-rustfmt-hook.md  2026-05-11-workspace-info.md  2026-05-11-zootree-dynamic-completions.md  2026-05-12-agent-cli.md  2026-05-13-agent-cli-alias.md  2026-05-13-info-wrap-and-agent-prompt.md  2026-05-13-tui-interaction.md  2026-05-14-info-alias-resolution.md  2026-05-15-create-start-flag.md  2026-05-15-tui-prompt-scroll-fix.md  2026-05-20-zellij-detached-session.md  2026-05-25-review-fixes.md  2026-06-16-text-input-migrate-to-ratatui-textarea.md  2026-06-23-create-fullscreen-wizard.md  2026-06-23-list-card-output.md  2026-06-24-create-wizard-single-field-input.md  2026-06-29-cancel-active-workspace.md  2026-06-29-create-lazy-repo-registration.md  2026-07-02-create-wizard-review-draft-scroll.md  2026-07-02-worktree-existence-and-repo-name-collision.md  2026-07-07-configurable-terminal-multiplexer.md  2026-07-08-cmux-group-workspaces.md  2026-07-08-cmux-workspace-description.md  2026-07-10-create-wizard-module-split.md  2026-07-10-review-backlog-workspace-split.md  2026-07-15-launching-zootree-workspace-skill.md  2026-07-17-cmux-default-repo-layout.md
docs/superpowers/specs/: 2026-04-28-zootree-design.md  2026-05-07-zellij-config-grouping-design.md  2026-05-07-zellij-kill-cleanup-order-design.md  2026-05-08-cli-completion-design.md  2026-05-08-force-skip-hooks-design.md  2026-05-08-github-cicd-release-design.md  2026-05-09-pre-commit-rustfmt-hook-design.md  2026-05-09-zootree-dynamic-completions.md  2026-05-11-workspace-info-design.md  (+24 more)
skills/launching-zootree-workspace/: SKILL.md
skills/zootree-dev/: SKILL.md
skills/zootree-usage/: SKILL.md
src/: lib.rs  main.rs  runner.rs  tui.rs
src/cli/: completions.rs  create_flow.rs  info.rs  mod.rs  prune.rs  repo.rs  template.rs  workspace.rs
src/config/: global.rs  mod.rs  name.rs  repo.rs  template.rs  workspace.rs
src/core/: cmux_layout.rs  completers.rs  copy_files.rs  git.rs  hook.rs  layout.rs  logging.rs  mod.rs  name_gen.rs  repo_names.rs  repo_status.rs  worktree_status.rs  zellij.rs
src/tui_app/: create_wizard.rs  info.rs  mod.rs  prompt.rs
tests/: agent_cli_test.rs  cmux_layout_test.rs  cmux_test.rs  completions_test.rs  config_test.rs  copy_files_test.rs  create_flow_test.rs  create_wizard_test.rs  git_test.rs  hook_test.rs  info_test.rs  layout_test.rs  name_gen_test.rs  repo_cli_test.rs  start_agent_test.rs  tui_app_test.rs  zellij_test.rs
(+14 files in other folders)
