[package]
name = "zootree"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
kdl = "6"
dirs = "6"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
shellexpand = "3"
