[package]
name = "zootree"
version = "0.0.1"
edition = "2021"
description = "A multi-repo workspace management tool with worktree, zellij, and lazygit integration"
license = "MIT"
repository = "https://github.com/weineel/zootree"
homepage = "https://github.com/weineel/zootree"
readme = "README.md"
keywords = ["workspace", "worktree", "zellij", "multi-repo"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
kdl = "6"
dirs = "6"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
shellexpand = "3"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
