[package]
name = "zootree"
version = "0.0.8"
edition = "2021"
description = "A multi-repo workspace management tool with worktree and terminal multiplexer integration"
license = "MIT"
repository = "https://github.com/weineel/zootree"
homepage = "https://github.com/weineel/zootree"
readme = "README.md"
keywords = ["workspace", "worktree", "multiplexer", "multi-repo"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kdl = "6.5"
dirs = "6"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1"
shellexpand = "3"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
ratatui = "0.30"
crossterm = "0.29"
ratatui-textarea = "0.9"
unicode-width = "0.2"
fuzzy-matcher = "0.3"
shlex = "1.3"
textwrap = "0.16"

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = [
  "user-hooks",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
